# MiWaK

./: .gitignore  CMakeLists.txt
apps/imgui/: example.cpp
core/: CMakeLists.txt
core/include/: MiWaK.h
core/src/: MiWaK.cpp
engine/: CMakeLists.txt
engine/src/: main.cpp
libs/imgui/: CMakeLists.txt
visual/: CMakeLists.txt
visual/src/: main.cpp
